Resolve "Allow noring gor meta files"